OPSMN-2501: The distortion is when coding is enabled. Fixed by having all input fields in same row or div. This allows input fields to wrap next line when there is no space to render on same line. This approach works very well as against making decision during programming on which field should appear on what line etc

--- a/www/app/styles/md-input.css
+++ b/www/app/styles/md-input.css
@@ -48,7 +48,6 @@
 .os-md-input .ui-select-search {
   border: 0;
   height: auto!important;
-  padding: 2px 0px;
   box-shadow: none !important;
   border-radius: 0;;
   border-bottom: 2px solid #ddd;
@@ -56,6 +55,15 @@
   outline: none;
   display: block;
   width: 100%;
+}
+
+.os-md-input input {
+  padding: 2px 0px;
+}
+
+.os-md-input .ui-select-match,
+.os-md-input .ui-select-search {
+  padding: 2px 0px 1px 0px;
 }
 
 .os-md-input textarea {
